# rustpack

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-build.sh
deploy/ca-certificates/: README.md
src/: anti_emulation.rs  builder.rs  codegen.rs  encode.rs  encrypt.rs  environmental.rs  interactive_ps.rs  lib.rs  main.rs  metadata.rs  payload_location.rs  polymorphism.rs  syscalls.rs
src/bypass/: amsi.rs  etw.rs  mod.rs  userland_hooks.rs
src/injection/: apc.rs  fiber.rs  local_crt.rs  mod.rs  pool_party.rs  remote_crt.rs  threadless.rs
src/input/: dotnet.rs  mod.rs  pe.rs  shellcode.rs
src/output/: cpl.rs  dll.rs  exe.rs  mod.rs  pic.rs  powershell.rs  service.rs  sideload.rs  xll.rs
tests/integration/: builder_test.rs
tests/unit/: encode_test.rs  encrypt_test.rs  environmental_test.rs  polymorphism_test.rs
